hphp/hack/test/typecheck/nameof/shapes_illegal.php.exp
ERROR: File "shapes_illegal.php", line 5, characters 26-36:
Shape field name must not be a `self::class` expression (Parsing[1002])
ERROR: File "shapes_illegal.php", line 6, characters 26-36:
Shape field name must not be a `self::class` expression (Parsing[1002])
ERROR: File "shapes_illegal.php", line 12, characters 9-21:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 13, characters 9-21:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 14, characters 9-21:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 15, characters 9-21:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 16, characters 9-21:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 17, characters 9-21:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 18, characters 9-21:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 19, characters 9-21:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 22, characters 22-34:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 23, characters 22-34:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 24, characters 22-34:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 25, characters 22-34:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 26, characters 22-34:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 27, characters 22-34:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 28, characters 22-34:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
ERROR: File "shapes_illegal.php", line 29, characters 22-34:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
